--- a/Week3/Task1Part1/Task1Part1/Task1Part1.csproj
+++ b/Week3/Task1Part1/Task1Part1/Task1Part1.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B670EBAF-965A-49CB-89EC-018D41B02279}</ProjectGuid>
+    <ProjectGuid>{223CB90E-C898-4A7D-A159-1A017A8A6A2F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Task1</RootNamespace>
-    <AssemblyName>Task1</AssemblyName>
+    <RootNamespace>Task1Part1</RootNamespace>
+    <AssemblyName>Task1Part1</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
